--- a/client/app/roomDetail/highlights.section.html
+++ b/client/app/roomDetail/highlights.section.html
@@ -9,7 +9,7 @@
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <div class="picture">
-          <img ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{room.roomDetail.propertyDetails.coords.latitude}},{{room.roomDetail.propertyDetails.coords.longitude}}&zoom=14&scale=2&size=400x250&markers=color:blue%7C{{room.roomDetail.propertyDetails.coords.latitude}},{{room.roomDetail.propertyDetails.coords.longitude}}&key=AIzaSyAm7woOFr0TOKG0U7jsBF5K3LSifdDjgfs">
+          <img ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{room.roomDetail.propertyDetails.coords.latitude}},{{room.roomDetail.propertyDetails.coords.longitude}}&zoom=14&scale=2&size=400x350&markers=color:blue%7C{{room.roomDetail.propertyDetails.coords.latitude}},{{room.roomDetail.propertyDetails.coords.longitude}}&key=AIzaSyAm7woOFr0TOKG0U7jsBF5K3LSifdDjgfs">
         </div>
       </div>
 
@@ -33,6 +33,8 @@
             <span class="distance" ng-if="room.distance.DRIVING"> <i class="fa fa-map-marker"></i>&nbsp;&nbsp;{{room.distance.DRIVING}}les from {{room.education.relatedUniversityId.name}}</span>
             <br><br>
           </p>
+
+          <p class="address">Travel time<br><br></p>
 
           <a class="distance-bubble">
             <i class="fa fa-car fa-lg"></i>
