--- a/client/app/landing/joinrented.html
+++ b/client/app/landing/joinrented.html
@@ -15,7 +15,10 @@
     <div class="row text-center lead-btn">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
         <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
-        <span id="siteseal"><script type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=aInIGq1vCUvVSh4ue6qNkcQkVqX63cbJ7voKlTyjAqcjRbztpY2DAv"></script></span>
+        <!--<span id="siteseal"><script type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=aInIGq1vCUvVSh4ue6qNkcQkVqX63cbJ7voKlTyjAqcjRbztpY2DAv"></script></span>-->
+        <div id="GoDaddySSLSeal" style="padding-top: 20px">
+          <img src="https://seal.godaddy.com//images//3//en//siteseal_gd_3_h_d_m.gif">
+        </div>
       </div>
     </div>
   </div>
