--- a/client/app/roomDetail/roommate.section.html
+++ b/client/app/roomDetail/roommate.section.html
@@ -9,7 +9,7 @@
       <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 row roomRoommates" ng-repeat="roommate in room.creatorRoommates track by $index" ng-if="roommate.confirmed">
 
           <!--roommate picture-->
-        <div class="col-xs-2 col-sm-4">
+        <div class="col-xs-2 col-sm-4 col-md-4 col-lg-4">
           <div class="picture text-center">
             <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle center-block looking-profile-img">
             <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-user fa-3x"></i>
@@ -17,13 +17,28 @@
         </div>
 
         <!--roommate info-->
-        <div class="col-xs-6 col-sm-8 info">
-          <!--firstname lastname-->
-            <span class="name"> {{roommate.relatedRoommateId.firstname || roommate.relatedUserId.firstname}} {{roommate.relatedRoommateId.lastname || roommate.relatedUserId.lastname}}</span>
-          <!--university data-->
-            <span class="university" ng-if="roommate.relatedRoommateId.usereducationUsers[0].educationCenterName || roommate.relatedUserId.usereducationUsers[0].educationCenterName">
+        <div class="col-xs-6 col-sm-8 col-md-8 col-lg-8 info">
+          <ul style="list-style: none">
+            <li>
+              <!--firstname lastname-->
+              <span class="name"> {{roommate.relatedRoommateId.firstname || roommate.relatedUserId.firstname}} {{roommate.relatedRoommateId.lastname || roommate.relatedUserId.lastname}}</span>
+            </li>
+            <li>
+              <!--university data-->
+              <span class="university" ng-if="roommate.relatedRoommateId.usereducationUsers[0].educationCenterName || roommate.relatedUserId.usereducationUsers[0].educationCenterName">
                                           {{roommate.relatedRoommateId.usereducationUsers[0].educationCenterName || roommate.relatedUserId.usereducationUsers[0].educationCenterName}}</span>
-            <span class="university" ng-if="!roommate.relatedRoommateId.usereducationUsers[0].educationCenterName && !roommate.relatedUserId.usereducationUsers[0].educationCenterName">No university</span>
+              <span class="university" ng-if="!roommate.relatedRoommateId.usereducationUsers[0].educationCenterName && !roommate.relatedUserId.usereducationUsers[0].educationCenterName">No university</span>
+            </li>
+            <li>
+              <!--graduation year-->
+              <span class="name">Class of {{roommate.relatedRoommateId.usereducationUsers[0].graduationDate || roommate.relatedUserId.usereducationUsers[0].graduationDate | date:'yyyy'}}</span>
+            </li>
+            <li>
+              <!--Major-->
+              <span class="name">Major: {{roommate.relatedRoommateId.usereducationUsers[0].major || roommate.relatedUserId.usereducationUsers[0].major}}</span>
+            </li>
+          </ul>
+
         </div>
 
       </div>
