Changed svg icons to font-awesome icons and placed in CSS. Changed footer icon svg to png.

--- a/client/app/landing/corefeatures.html
+++ b/client/app/landing/corefeatures.html
@@ -5,9 +5,9 @@
     <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
       <h2 class="featurette-heading">Verified students. <span class="text-muted">At your university.</span></h2>
       <ul class="icon-list">
-        <li><img class="icons" src="./../assets/images/mini-icons/edu.svg" /> Sign-up requires valid university email</li>
-        <li><img class="icons" src="./../assets/images/mini-icons/lock3.svg" />Encrypted online connection</li>
-        <li><img class="icons" src="./../assets/images/mini-icons/cloud.svg" />Data is stored securely on Amazon Cloud</li>
+        <li><i class="fa fa-edu fa-lg"></i>&nbsp;&nbsp;Sign-up requires valid university email</li>
+        <li><i class="fa fa-lock3 fa-lg"></i>&nbsp;&nbsp;Encrypted online connection</li>
+        <li><i class="fa fa-cloudx fa-lg"></i>&nbsp;&nbsp;Data is stored securely on Amazon Cloud</li>
       </ul>
     </div>
     <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
@@ -24,14 +24,14 @@
     <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
       <h2 class="featurette-heading">Search available rooms. <span class="text-muted">Look for roommates.</span></h2>
       <ul class="icon-list">
-        <li><img class="icons" src="./../assets/images/mini-icons/bus.svg" />Commute times to your university</li>
-        <li><img class="icons" src="./../assets/images/mini-icons/users2.svg" />Roommate profiles</li>
-        <li><img class="icons" src="./../assets/images/mini-icons/search.svg" />Find what you need
+        <li><i class="fa fa-busx fa-lg"></i>&nbsp;&nbsp;Commute times to your university</li>
+        <li><i class="fa fa-usersx fa-lg"></i>&nbsp;&nbsp;Roommate profiles</li>
+        <li><i class="fa fa-searchx fa-lg"></i>&nbsp;&nbsp;Find what you need
           <ul class="icon-list">
-            <li><img class="icons" src="./../assets/images/mini-icons/calendar5.svg" />Available date</li>
-            <li><img class="icons" src="./../assets/images/mini-icons/bathroom.svg" />Private or shared bathroom</li>
-            <li><img class="icons" src="./../assets/images/mini-icons/seven-segment-3.svg" />Number of roommates</li>
-            <li><img class="icons" src="./../assets/images/mini-icons/bedroom.svg" />Room type - single or double</li>
+            <li><i class="fa fa-calendarx fa-lg"></i>&nbsp;&nbsp;Available date</li>
+            <li><i class="fa fa-bathroomx fa-lg"></i>&nbsp;&nbsp;Private or shared bathroom</li>
+            <li><i class="fa fa-three fa-lg"></i>&nbsp;&nbsp;Number of roommates</li>
+            <li><i class="fa fa-bedroomx fa-lg"></i>&nbsp;&nbsp;Room type - single or double</li>
           </ul>
         </li>
         <li><img class="icons" src="./../assets/images/mini-icons/heart6.svg" />Follow a property</li>
@@ -45,13 +45,13 @@
     <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
       <h2 class="featurette-heading">Connect with other students. <span class="text-muted">Around you.</span><sup style="font-size: 40%; top: -1em;">(Coming Soon)</sup></h2>
       <ul class="icon-list">
-        <li><img class="icons" src="./../assets/images/mini-icons/bubbles4.svg" /> Meet new students around you
+        <li><i class="fa fa-bubbles4 fa-lg"></i>&nbsp;&nbsp;Meet new students around you
           <ul class="icon-list">
-            <li><img class="icons" src="./../assets/images/mini-icons/lock3.svg" />Address is not shared and always private</li>
+            <li><i class="fa fa-lock3 fa-lg"></i>&nbsp;&nbsp;Address is not shared and always private</li>
           </ul>
         </li>
-        <li><img class="icons" src="./../assets/images/mini-icons/bubble-heart.svg" />Learn about your area and safe neighborhoods</li>
-        <li><img class="icons" src="./../assets/images/mini-icons/smiley2.svg" />Get the most out of living off-campus</li>
+        <li><i class="fa fa-bubble-heart fa-lg"></i>&nbsp;&nbsp;Learn about your area and safe neighborhoods</li>
+        <li><i class="fa fa-smiley2 fa-lg"></i>&nbsp;&nbsp;Get the most out of living off-campus</li>
       </ul>
     </div>
     <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
