--- a/client/app/landing/community.html
+++ b/client/app/landing/community.html
@@ -14,7 +14,7 @@
         <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
           <h2 class="featurette-heading">Walk to and from campus. <span class="text-muted">Safely.</span></h2>
           <ul class="icon-list">
-            <li><img class="icons" src="./assets/images/mini-icons/steps.svg" />Connect and walk home safely with other students around you</li>
+            <li><i class="fa fa-steps fa-lg"></i>&nbsp;&nbsp;Connect and walk home safely with other students around you</li>
           </ul>
         </div>
         <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
@@ -31,8 +31,8 @@
         <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
           <h2 class="featurette-heading">Share a ride. <span class="text-muted">Around your schedule.</span></h2>
           <ul class="icon-list">
-            <li><img class="icons" src="./assets/images/mini-icons/car.svg" />Who is driving to campus and can you carpool?</li>
-            <li><img class="icons" src="./assets/images/mini-icons/coins.svg" />Save on gas and parking</li>
+            <li><i class="fa fa-carx fa-lg"></i>&nbsp;&nbsp;Who is driving to campus and can you carpool?</li>
+            <li><i class="fa fa-coins fa-lg"></i>&nbsp;&nbsp;Save on gas and parking</li>
           </ul>
         </div>
       </div>
@@ -43,9 +43,9 @@
         <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
           <h2 class="featurette-heading">Attend university events. <span class="text-muted">Together.</span></h2>
           <ul class="icon-list">
-            <li><img class="icons" src="./assets/images/mini-icons/guitar.svg" />Attend on-campus events with other students around you</li>
-            <li><img class="icons" src="./assets/images/mini-icons/bubbles4.svg" />Meet new students at on-campus events</li>
-            <li><img class="icons" src="./assets/images/mini-icons/calendar5.svg" />Upcoming events notification</li>
+            <li><i class="fa fa-guitar fa-lg"></i>&nbsp;&nbsp;Attend on-campus events with other students around you</li>
+            <li><i class="fa fa-bubbles4 fa-lg"></i>&nbsp;&nbsp;Meet new students at on-campus events</li>
+            <li><i class="fa fa-calendarx fa-lg"></i>&nbsp;&nbsp;Upcoming events notification</li>
           </ul>
         </div>
         <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
