Updated Readme. Changed Sign-up and Sign-in button color to orange for mobile phone fix. Fixed contact us href on dashboard

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -73,8 +73,8 @@
     </div>
 
       <div class="options">
-        <input ng-show="!newPasswordAddon" type="submit" value="Sign me in!" class="lrg-btn submit" >
-        <input ng-if="newPasswordAddon"  type="button"  class="lrg-btn submit" ng-click="sendPwdResetMail(form)" value="Send reset password e-mail!">
+        <input ng-show="!newPasswordAddon" type="submit" value="Sign me in!" class="btn-rented-large primary" >
+        <input ng-if="newPasswordAddon"  type="button"  class="btn-rented-large primary" ng-click="sendPwdResetMail(form)" value="Send reset password e-mail!">
         <span>Don't have an account? <a class="link" ui-sref="signup">Sign up</a></span>
       </div>
 
