--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -35,7 +35,7 @@
       <p class="help-block" ng-show="form.password.$error.mongoose">{{ signup.errors.password }}</p>
       <p class="help-block">{{ signup.errors.other }}</p>
       <div class="options">
-        <input type="submit" value="Sign me up!" class="lrg-btn submit">
+        <input type="submit" value="Sign me up!" class="btn-rented-large primary">
         <span>Already have an account? <a class="link" ui-sref="login">Sign in</a></span>
       </div>
 
