--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -32,7 +32,7 @@
           <div class="feedback">
 
             <h3>Your feedback is valuable</h3>
-            <p>Please <a href="mailto:feedback@campusly.org?=Website%20Feedback" target="_top">contact us</a> to help improve Campusly.</p>
+            <p>Please <a href="mailto:feedback@campusly.org?=Website%20Feedback">contact us</a> to help improve Campusly.</p>
 
           </div>
 
