--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -32,7 +32,7 @@
       </div>
       <div class="col-xs-11 col-sm-11">
         <dl style="margin-top: 10px; margin-left: 20px">
-          <dt>Error while trying to validate your email address. Your used incorrect or expired validation token.</dt>
+          <dt>Your validation link has expired.</dt>
           <dd>Please re-type your e-mail and click <a ng-click="resendEmail(user.email)">resend.</a></dd>
         </dl>
       </div>
