Updated message on sign-up for verification email

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -58,7 +58,7 @@
   <section class="login-box white-box " style="text-align: center" ng-show="signup.errors.verification">
     <h2 class="heading">Hello&nbsp{{signup.user.firstname}},</h2>
     <i class="fa fa-envelope-o fa-5x"></i>
-    <h4>Please verify your university email address to access the campusly community. <br><br>Verification email has been sent to {{signup.user.email}}.</h4>
+    <h4>Please verify your university email address <br>in the next 30min. <br><br>Verification email has been sent to {{signup.user.email}}.</h4>
   </section>
 
 </div>
