--- a/client/index.html
+++ b/client/index.html
@@ -214,6 +214,7 @@
           <script src="components/widgets/fileupload/ngthumb.js"></script>
           <script src="components/widgets/modal/modal.service.js"></script>
           <script src="components/widgets/mongoose-error/mongoose-error.directive.js"></script>
+          <script src="components/widgets/my-spinner/my.spinner.js"></script>
           <script src="components/widgets/phone-mask/phone.mask.js"></script>
           <script src="components/widgets/slider/slider.js"></script>
           <script src="components/widgets/widget.config.js"></script>
