--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -49,7 +49,7 @@
   <section class="login-box white-box " style="text-align: center" ng-show="signup.showValidationMessage">
     <h2 class="heading">Hello&nbsp{{signup.user.firstname}},</h2>
     <i class="fa fa-envelope-o fa-5x"></i>
-    <h4>Please verify your university email address <br>in the next 60min. <br><br>Verification email has been sent to {{signup.user.email}}.</h4>
+    <h4>Your account has been created. <br>Please verify your university email address <br>in the next 30min. <br><br>Verification email has been sent to {{signup.user.email}}.</h4>
   </section>
 
 </div>
