--- a/client/app/roomDetail/roommate.section.html
+++ b/client/app/roomDetail/roommate.section.html
@@ -1,4 +1,4 @@
-<div class="row" ng-if="room.creatorRoommates.length">
+<div class="row" ng-if="room.confirmedRoommates">
 
   <div class="page-header">
     <h2 class="section-title">Roommates</h2>
