--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -31,8 +31,7 @@
 
           <div class="feedback">
 
-            <h3>Your feedback is valuable</h3>
-            <p>Please <a href="mailto:feedback@campusly.org?=Website%20Feedback">contact us</a> to help improve Campusly.</p>
+            <p>How we improve Campusly for you? <br>Email us at <a href="mailto:feedback@campusly.org?=Website%20Feedback">feedback@campusly.org</a></p>
 
           </div>
 
