Looking post image added circle. Removed extra quote from About me

--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -35,7 +35,7 @@
               <dt>Major</dt>
               <dd>{{myProfile.education.major}}</dd>
               <dt>About Me</dt>
-              <dd> <p class="quote" ng-if="myProfile.me.aboutMe"> {{myProfile.me.aboutMe}}" </p> </dd>
+              <dd> <p class="quote" ng-if="myProfile.me.aboutMe"> {{myProfile.me.aboutMe}} </p> </dd>
             </dl>
 
             <button class="btn btn-primary" style="background-color: #3B5998;" ng-click="loginOauth('facebook')" ng-disabled="myProfile.tempMe.facebook">
