Added looking post detail text field based on user feedback

--- a/client/app/dashboard/my-profile/add-looking/new.looking.html
+++ b/client/app/dashboard/my-profile/add-looking/new.looking.html
@@ -261,14 +261,21 @@
           <select id="openToFullYearLeaseNewRoomates" class="form-control" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates">
             <option value="true">Yes</option>
             <option value="false">No</option>
-          </select><br/>
+          </select>
         </div>
       </div>
 
     </div>
 
-
     <!--end of third col 4-->
+
+      <!-- Looking Details -->
+
+      <div class="row post-padding">
+        <div class="col-xs-10 col-sm-10 col-xs-offset-2 col-sm-offset-2 input-post">
+          <textarea required name="area" id="area" cols="60" rows="3" ng-model="newLooking.tempLooking.area"  class="form-control" placeholder="Enter looking post details"></textarea><br/>
+        </div>
+      </div>
 
     <!--<button ng-click="" class="btn btn-primary">Delete</button>-->
 
