--- a/client/app/dashboard/looking/looking-details/looking.info.section.html
+++ b/client/app/dashboard/looking/looking-details/looking.info.section.html
@@ -2,6 +2,15 @@
 
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 white-box">
 
+  <div class="row">
+    <div class="col-xs-11 col-sm-11 col-xs-offset-1 col-sm-offset-1">
+      <dl>
+        <dt>Details</dt>
+        <dd>{{detail.lookingDetail.area}}<br><br></dd>
+      </dl>
+    </div>
+  </div>
+
   <!--start of first col 4-->
   <div class="col-md-4">
 
