--- a/client/app/dashboard/my-profile/edit-looking/edit.looking.html
+++ b/client/app/dashboard/my-profile/edit-looking/edit.looking.html
@@ -268,6 +268,14 @@
       </div>
       <!--end of third col 4-->
 
+      <!-- Looking Details -->
+
+      <div class="row post-padding">
+        <div class="col-xs-10 col-sm-10 col-xs-offset-2 col-sm-offset-2 input-post">
+          <textarea required name="area" id="area" cols="60" rows="3" ng-model="editLooking.tempLooking.area"  class="form-control" placeholder="Edit looking post details"></textarea><br/>
+        </div>
+      </div>
+
   </div>
 
 
