--- a/client/app/dashboard/my-profile/add-looking/new.looking.html
+++ b/client/app/dashboard/my-profile/add-looking/new.looking.html
@@ -10,6 +10,7 @@
 
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 white-box">
 
+      <form name="newLookingForm" ng-submit="newLooking.addLooking(newLooking.tempLooking, newLookingForm)" novalidate>
     <!--start of first col 4-->
     <div class="col-md-4">
 
@@ -24,7 +25,7 @@
           <div class="col-xs-9 col-sm-7 input-post">
             <label for="moveInDate">Move-in date</label>
             <p class="input-group">
-              <input type="text" id="moveInDate" class="form-control" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveInDate" is-open="datePickers.startDate" close-text="Close" />
+              <input type="text" id="moveInDate" name="moveInDate" class="form-control" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveInDate" is-open="datePickers.startDate" close-text="Close" required ng-class="{'educationError': newLookingForm.moveInDate.$invalid && newLooking.submitted}"/>
                       <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="open($event,'startDate')"><i class="glyphicon glyphicon-calendar"></i></button>
                       </span>
@@ -43,7 +44,7 @@
           <div class="col-xs-9 col-sm-7 input-post">
             <label for="moveInDate">Move-out date</label>
             <p class="input-group">
-              <input type="text" id="moveOutDate" class="form-control" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveOutDate" is-open="datePickers.endDate" close-text="Close" />
+              <input type="text" id="moveOutDate" name="moveOutDate" class="form-control" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveOutDate" is-open="datePickers.endDate" close-text="Close" required ng-class="{'educationError': newLookingForm.moveOutDate.$invalid && newLooking.submitted}"/>
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="open($event,'endDate')"><i class="glyphicon glyphicon-calendar"></i></button>
                           </span>
@@ -63,7 +64,7 @@
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="maxMonthlyRent">Max monthly rent ($)</label>
-          <input type="number" id="maxMonthlyRent" name="maxMonthlyRent" class="form-control"  placeholder="e.x. 500" ng-model="newLooking.tempLooking.maxMonthlyRent"/>
+          <input type="number" min="0" id="maxMonthlyRent" name="maxMonthlyRent" class="form-control"  placeholder="e.x. 500" ng-model="newLooking.tempLooking.maxMonthlyRent" required ng-class="{'educationError': newLookingForm.maxMonthlyRent.$invalid && newLooking.submitted}"/>
         </div>
 
       </div>
@@ -78,7 +79,7 @@
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="utilitiesIncluded">Utilities included?</label><br/>
-          <select id="utilitiesIncluded" class="form-control" ng-model="newLooking.tempLooking.utilitiesIncluded">
+          <select id="utilitiesIncluded" name="utilities" class="form-control" ng-model="newLooking.tempLooking.utilitiesIncluded" required ng-class="{'educationError': newLookingForm.utilities.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
           </select>
@@ -95,7 +96,7 @@
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="busRouteRequired">Near bus lines?</label><br/>
-          <select id="busRouteRequired" class="form-control" ng-model="newLooking.tempLooking.busRouteRequired">
+          <select id="busRouteRequired" class="form-control" name="bus" ng-model="newLooking.tempLooking.busRouteRequired" required ng-class="{'educationError': newLookingForm.bus.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
           </select>
@@ -118,7 +119,7 @@
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
            <label for="numRoommates">Max no. of roommates</label>
-           <input type="number" id="numRoommates" name="numRoommates" class="form-control"  placeholder="e.x. 3" ng-model="newLooking.tempLooking.numRoommates"/>
+           <input type="number" min="0" max="10" id="numRoommates" name="numRoommates" class="form-control"  placeholder="e.x. 3 (max: 10)" ng-model="newLooking.tempLooking.numRoommates" required ng-class="{'educationError': newLookingForm.numRoommates.$invalid && newLooking.submitted}"/>
          </div>
        </div>
 
@@ -132,7 +133,7 @@
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
            <label for="gender">Gender preference</label>
-           <select id="gender" class="form-control" ng-model="newLooking.tempLooking.gender">
+           <select id="gender" name="gender" class="form-control" ng-model="newLooking.tempLooking.gender" required ng-class="{'educationError': newLookingForm.gender.$invalid && newLooking.submitted}">
              <option value="male only">Male only</option>
              <option value="female only">Female only</option>
              <option value="no preference">No preference</option>
@@ -150,7 +151,7 @@
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
            <label for="sharedBathroom">Shared bathroom?</label><br/>
-           <select id="sharedBathroom" class="form-control" ng-model="newLooking.tempLooking.sharedBathroom">
+           <select id="sharedBathroom" name="bath" class="form-control" ng-model="newLooking.tempLooking.sharedBathroom" required ng-class="{'educationError': newLookingForm.bath.$invalid && newLooking.submitted}">
              <option value="true">Yes</option>
              <option value="false">No</option>
            </select>
@@ -167,7 +168,7 @@
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
            <label for="roomType">Room preference</label>
-           <select id="roomType" class="form-control" ng-model="newLooking.tempLooking.roomType">
+           <select id="roomType" class="form-control" name="type" ng-model="newLooking.tempLooking.roomType" required ng-class="{'educationError': newLookingForm.type.$invalid && newLooking.submitted}">
              <option value="single">Single</option>
              <option value="double">Double</option>
              <option value="living room">Living room</option>
@@ -185,7 +186,7 @@
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
            <label for="furnished">Furnished?</label><br/>
-           <select id="furnished" class="form-control" ng-model="newLooking.tempLooking.furnished">
+           <select id="furnished" class="form-control" name="furnished" ng-model="newLooking.tempLooking.furnished" required ng-class="{'educationError': newLookingForm.furnished.$invalid && newLooking.submitted}">
              <option value="true">Yes</option>
              <option value="false">No</option>
            </select>
@@ -207,7 +208,7 @@
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="smokingAllowed">Smoking allowed?</label><br/>
-          <select id="smokingAllowed" class="form-control" ng-model="newLooking.tempLooking.smokingAllowed">
+          <select id="smokingAllowed" class="form-control" name="smoking" ng-model="newLooking.tempLooking.smokingAllowed" required ng-class="{'educationError': newLookingForm.smoking.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
           </select>
@@ -224,7 +225,7 @@
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="petsAllowed">Pets allowed?</label><br/>
-          <select id="petsAllowed" class="form-control" ng-model="newLooking.tempLooking.petsAllowed">
+          <select id="petsAllowed" class="form-control" name="pets" ng-model="newLooking.tempLooking.petsAllowed" required ng-class="{'educationError': newLookingForm.pets.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
           </select>
@@ -241,7 +242,7 @@
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="parkingNeeded">Parking included?</label><br/>
-          <select id="parkingNeeded" class="form-control" ng-model="newLooking.tempLooking.parkingNeeded">
+          <select id="parkingNeeded" class="form-control" name="parking" ng-model="newLooking.tempLooking.parkingNeeded" required ng-class="{'educationError': newLookingForm.parking.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
           </select>
@@ -258,7 +259,7 @@
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="parkingNeeded">Meet new roommates?</label><br/>
-          <select id="openToFullYearLeaseNewRoomates" class="form-control" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates">
+          <select id="openToFullYearLeaseNewRoomates" name="meetNew" class="form-control" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates" required ng-class="{'educationError': newLookingForm.meetNew.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
           </select>
@@ -273,22 +274,30 @@
 
       <div class="row post-padding">
         <div class="col-xs-10 col-sm-10 col-xs-offset-2 col-sm-offset-2 input-post">
-          <textarea required name="area" id="area" cols="60" rows="3" ng-model="newLooking.tempLooking.area"  class="form-control" placeholder="Enter looking post details"></textarea><br/>
+          <textarea name="area" id="area" cols="60" rows="3" ng-model="newLooking.tempLooking.area"  class="form-control" placeholder="Enter looking post details (optional)"></textarea><br/>
         </div>
       </div>
 
-    <!--<button ng-click="" class="btn btn-primary">Delete</button>-->
+        <p class="help-block" style="font-size: 0.9em" ng-if="newLookingForm.$error.required.length>0 && newLooking.submitted">{{newLookingForm.$error.required.length}} more field(s) are required!</p>
+        <p class="help-block" style="font-size: 0.9em" ng-if="newLookingForm.$error.max && newLooking.submitted">Maximum 10 roommates allowed</p>
+
+        <!--<button ng-click="" class="btn btn-primary">Delete</button>-->
+
+        <div class="row post-padding">
+          <div class="col-xs-12 col-sm-12">
+            <button type="submit" class="btn-rented-medium primary pull-right">Save</button>
+          </div>
+        </div>
+
+      </form>
 
     </div>
+
   </div>
 
   <!-- Save button for looking post -->
 
-  <div class="row post-padding">
-    <div class="col-xs-12 col-sm-12">
-      <button ng-click="newLooking.addLooking(newLooking.tempLooking)" class="btn-rented-medium primary pull-right">Save</button>
-    </div>
-  </div>
+
 
 </div>
 </div>
