finishing email update

--- a/client/app/rooms/add.room/add.room.html
+++ b/client/app/rooms/add.room/add.room.html
@@ -409,7 +409,7 @@
 
               </div>
             </div>
-            <!-- End addres box -->
+            <!-- End address box -->
 
           </div>
 
