--- a/client/index.html
+++ b/client/index.html
@@ -41,11 +41,20 @@
     <!-- endbuild -->
   </head>
   <body><div id="fb-root"></div>
-    <script>(function(d, s, id) {
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1482591365325802',
+          xfbml      : true,
+          version    : 'v2.3',
+          cookie     : true
+        });
+      };
+      (function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1482591365325802";
+      js.src = "//connect.facebook.net/en_US/sdk.js";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     <!--[if lt IE 7]>
