Front-end changes based on usability study

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -58,6 +58,7 @@
                     <li><i class="fa fa-users"></i>&nbsp;&nbsp;{{room.roomDetails.numRoomates}} roommates</li>
                     <li><i class="fa fa-shower"></i>&nbsp;&nbsp;{{room.roomDetails.sharedBathroom ? "Shared" : "Private"}} bathroom</li>
                     <li><i class="fa fa-arrow-right"></i>&nbsp;&nbsp;{{room.roomDetails.availableMoveIn | date }}</li>
+                    <li><i class="fa fa-map-marker"></i>&nbsp;&nbsp;{{room.propertyDetails.city }}</li>
                   </ul>
                 </a>
               </div>
