--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -56,7 +56,7 @@
             <div ng-repeat="group in rooms.groups" class="row">
               <!--ng-if="room.roomDetails.creatorId!==rooms.me.id" to not show own user room listings-->
               <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 room" ng-repeat="room in group">
-                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                <div class="flip-container-room" ontouchstart="this.classList.toggle('hover');">
                   <div class="flipper">
                     <div class="front white-box">
                       <div class="picture safariFix">
@@ -68,10 +68,11 @@
                         </strong>
                       </div>
                       <ul class="specs">
-                        <li><i class="fa fa-bed"></i> {{room.roomDetails.roomType}}</li>
-                        <li><i class="fa fa-users"></i> {{room.roomDetails.numRoomates}} roommates</li>
-                        <li><i class="fa fa-shower"></i> {{room.roomDetails.sharedBathroom ? "Shared" : "Private"}} bathroom</li>
-                        <li><i class="fa fa-arrow-right"></i> {{room.roomDetails.availableMoveIn | date }}</li>
+                        <li><i class="fa fa-bed"></i>&nbsp;&nbsp;{{room.roomDetails.roomType}}</li>
+                        <li><i class="fa fa-users"></i>&nbsp;&nbsp;{{room.roomDetails.numRoomates}} roommates</li>
+                        <li><i class="fa fa-shower"></i>&nbsp;&nbsp;{{room.roomDetails.sharedBathroom ? "Shared" : "Private"}} bathroom</li>
+                        <li><i class="fa fa-arrow-right"></i>&nbsp;&nbsp;{{room.roomDetails.availableMoveIn | date }}</li>
+                        <li><i class="fa fa-map-marker"></i>&nbsp;&nbsp;{{room.propertyDetails.city}}</li>
                       </ul>
                     </div>
                     <div class="back">
