--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -123,6 +123,8 @@
 
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
+        <form name="editAddressForm" ng-submit="editProfile.saveAddress(editAddressForm, editProfile.tempAddress.streetAddress)" novalidate>
+
         <div class="row">
 
           <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 col-sm-offset-3 col-md-offset-3 col-lg-offset-3">
@@ -137,50 +139,51 @@
             <div class="form-group input-post-readonly">
 
               <label for="streetNumber">Street Number</label>
-              <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetAddress.streetNumeric" readonly/>
+              <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetAddress.streetNumeric" readonly ng-class="{'educationError': editAddressForm.streetNumber.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="streetName">Street Name</label>
-              <input type="text" id="streetName" name="streetName" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly/>
+              <input type="text" id="streetName" name="streetName" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly ng-class="{'educationError': editAddressForm.streetName.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
             <div class="form-group input-post">
 
               <label for="apt">Apt No.</label>
-              <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.streetAddress.apt"/>
+              <input type="text" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.streetAddress.apt"/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="zip">Zip Code</label>
-              <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.streetAddress.zip" readonly/>
+              <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.streetAddress.zip" readonly ng-class="{'educationError': editAddressForm.zip.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="city">City</label>
-              <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.streetAddress.city" readonly/>
+              <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.streetAddress.city" readonly ng-class="{'educationError': editAddressForm.city.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="city">State</label>
-              <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.streetAddress.state" readonly/>
+              <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.streetAddress.state" readonly ng-class="{'educationError': editAddressForm.state.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
-
+              <p ng-if="editProfile.errors" class="help-block">{{editProfile.errors}}</p>
           </div>
 
         </div>
 
-        <button class="btn-rented-medium primary pull-right" ng-click="editProfile.saveAddress(editProfile.tempAddress.streetAddress)">Save</button>
+        <input class="btn-rented-medium primary pull-right" type="submit" value="Save"></input>
 
+        </form>
       </div>
 
     </div>
