--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -1,6 +1,6 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
 <div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
-<div class="main-wrapper" cg-busy="{promise:editProfile.busy, message:'Loading your profile... Please wait'}">
+<div class="main-wrapper">
 <div class="container edit-profile">
   <div class="page-header">
     <h2> Personal </h2>
@@ -183,8 +183,8 @@
           </div>
 
         </div>
-
-        <input class="btn-rented-medium primary pull-right" type="submit" value="Save"></input>
+        <input ng-if="editProfile.tempAddress.streetAddress.id" type="submit" value="Save" class="btn-rented-medium primary pull-right"  ng-disabled="editAddressForm.$pristine"/>
+        <input ng-if="!editProfile.tempAddress.streetAddress.id" type="submit" class="btn-rented-medium primary pull-right" value="Save" />
 
         </form>
       </div>
@@ -194,8 +194,4 @@
 
 </div>
 
-
-
-
-</div>
 </div>
